# adk-coder

./: .cruft.json  AGENTS.md  README.md  pyproject.toml
.agent/skills/gh-release/: SKILL.md
.agent/skills/gh-release/scripts/: create-release.sh
.devcontainer/: devcontainer.json
.github/workflows/: pages.yaml  publish.yaml  test.yaml
adk_cli/: summarize.py  tui.py
adk_coder/: agent_factory.py  api_key.py  confirmation.py  constants.py  main.py  mcp.py  models.py  policy.py  projects.py  retry_gemini.py  settings.py  status.py  summarize.py  tools.py  tui.py
adk_coder/cli/: config.py  sessions.py
adk_coder/skills/: __init__.py  _skills.py
adk_coder/skills/builtin/feature-dev/: SKILL.md
adk_coder/skills/builtin/feature-dev/agents/: code-architect.md  code-explorer.md  code-reviewer.md
adk_coder/skills/builtin/skill-creator/: SKILL.md
adk_coder/skills/builtin/skill-creator/scripts/: init_skill.py  package_skill.py  validate_skill.py
docs/: bootstrapping_plan.md  implementation_plan.md  mcp_usage.md  memory_strategy.md  task.md  tui_redesign_plan.md
script/: test
tests/: __init__.py  mock_mcp_server.py  test_agent_factory.py  test_api_key.py  test_config_mcp.py  test_mcp.py  test_mcp_integration.py  test_policy.py  test_settings.py  test_tools.py
tests/cli/: test_commands.py  test_main.py
tests/skills/: test_builtin_agents.py  test_skills.py
